src/objects/Case_Routing_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>CaseAdmin__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case Admin</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Case_Routing_Mapping</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CaseOwner__c</fullName>
        <description>It should hold Id of Case owner. It can be either user OR queue.</description>
        <inlineHelpText>It should hold Id of Case owner. It can be either user OR queue.</inlineHelpText>
        <label>Owner Id</label>
        <length>250</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Case_Routing_Mapping1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Group_Name__c</fullName>
        <description>Group name associated to Related To Id field, in case Related To Id holds Group Id. This is just for Admin reference. This needs to be populated manually.</description>
        <inlineHelpText>Group name associated to Related To Id field, in case Related To Id holds Group Id. This is just for Admin reference. This needs to be populated manually.</inlineHelpText>
        <label>Group Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Name__c</fullName>
        <description>This field will auto-populate name of owner based on Id provide in Owner Id field.</description>
        <inlineHelpText>This field will auto-populate name of owner based on Id provide in Owner Id field.</inlineHelpText>
        <label>Owner Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_To_Id__c</fullName>
        <description>This should hold either Group Id OR Topic Id. Admin needs to populate this manually.</description>
        <inlineHelpText>This should hold either Group Id OR Topic Id. Admin needs to populate this manually.</inlineHelpText>
        <label>Community Origin ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Topic_Name__c</fullName>
        <description>Topic name associated to Related To Id field, in case Related To Id holds Topic Id. This is just for Admin reference. This needs to be populated manually.</description>
        <inlineHelpText>Topic name associated to Related To Id field, in case Related To Id holds Topic Id. This is just for Admin reference. This needs to be populated manually.</inlineHelpText>
        <label>Topic Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Case Routing Mapping</label>
    <listViews>
        <fullName>All_Case_Routing</fullName>
        <columns>NAME</columns>
        <columns>Group_Name__c</columns>
        <columns>Topic_Name__c</columns>
        <columns>Owner_Name__c</columns>
        <columns>Case_Assigned_To__c</columns>
        <columns>CaseAdmin__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Case Routing</label>
    </listViews>
    <nameField>
        <label>Case Routing Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case Routing Mapping</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>